objects/APR_20__c.object
<CustomObject>
    <fields>
        <fullName>Picklist_field__c</fullName>
        <label>Picklist field</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>picklist_alpha__c</fullName>
        <label>picklist alpha</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>a</fullName>
                </value>
                <value>
                    <fullName>b</fullName>
                </value>
                <value>
                    <fullName>c</fullName>
                </value>
                <value>
                    <fullName>d</fullName>
                </value>
                <value>
                    <fullName>g</fullName>
                </value>
                <value>
                    <fullName>h</fullName>
                </value>
                <value>
                    <fullName>i</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>textfield__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>textfield</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>APR 20</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>APR-{00000}</displayFormat>
        <label>APR 20 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>APR 20</pluralLabel>
    <recordTypes>
        <fullName>first</fullName>
        <active>true</active>
        <label>first</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>